--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,25 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: UFSP Evolutionary Systems Biology
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Webpage for the independent research program Evolutionary Systems Biology at the University of Potsdam
 
 # Your name to show in the footer
-author: Some Person
+author: Sebastian Huss
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
+
+  PROJECT: "project"
+  TEAM: "team"
+  RESOURCES:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
-
+  PUBLICATIONS:
+  Contact Us:
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
@@ -38,10 +40,8 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "shuss@euni-potsdam.de"
+  github: sebahu
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
@@ -62,13 +62,13 @@ social-network-links:
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+ # twitter: true
+ # facebook: true
+ # linkedin: true
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+#url-pretty: "MyWebsite.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
@@ -164,7 +164,7 @@ date_format: "%B %-d, %Y"
 # --- You don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "UTC"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
