--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ navbar-links:
   RESOURCES:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  PUBLICATIONS:
-  Contact Us:
+  PUBLICATIONS: "publications"
+  Contact Us: "contact"
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
