--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: UFSP Evolutionary Systems Biology
+title: Evolutionary Systems Biology @ University of Potsdam
 
 # Short description of your site
 description: Webpage for the independent research program Evolutionary Systems Biology at the University of Potsdam
@@ -24,7 +24,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/avatar-icon.png"
+avatar: "img/esb-logo.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
@@ -79,11 +79,20 @@ excerpt_length: 50
 # --- Colours / background image --- #
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
+# UP blue: #0e8cd0;
+# UP darkblue (text): #003f60;
+# UP lightblue: #cfdae3;
+# UP text: : #333;
+# UP bg: #ededed;
 
-navbar-col: "#F5F5F5"
-navbar-text-col: "#404040"
-navbar-border-col: "#EAEAEA"
-page-col: "#FFFFFF"
+#navbar-col: "#F5F5F5"
+navbar-col: "#cfdae3"
+#navbar-text-col: "#404040"
+navbar-text-col: "#003f60";
+#navbar-border-col: "#EAEAEA"
+navbar-border-col: "#0e8cd0"
+#page-col: "#FFFFFF"
+page-col: "#ededed"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
