--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: "Evolutionary Systems Biology @ University of Potsdam"
+title: "Evolutionary Systems Biology at the University of Potsdam"
 
 # Short description of your site
 description: Webpage for the independent research program Evolutionary Systems Biology at the University of Potsdam
