--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # Name of website
-title: Evolutionary Systems Biology
+title: Evolutionary Systems Biology @ University of Potsdam
 
 # Short description of your site
 description: Webpage for the independent research program Evolutionary Systems Biology at the University of Potsdam
@@ -24,8 +24,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "img/esb-logo.png"
-avatar: "/assets/img/avatar-icon.png"
+avatar: "img/esb-logo.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour here.
 round-avatar: true
@@ -86,13 +85,9 @@ excerpt_length: 50
 # UP text: : #333;
 # UP bg: #ededed;
 
-#navbar-col: "#F5F5F5"
 navbar-col: "#CFDAE3"
-#navbar-text-col: "#404040"
-navbar-text-col: "#003F60";
-#navbar-border-col: "#EAEAEA"
+navbar-text-col: "#003F60"
 navbar-border-col: "#0E8CD0"
-#page-col: "#FFFFFF"
 page-col: "#EDEDED"
 link-col: "#008AFF"
 hover-col: "#0085A1"
